--- a/test/fixture.html
+++ b/test/fixture.html
@@ -35,5 +35,6 @@
 <px-slider start-value="10" end-value="20" id="px_slider_range"></px-slider>
 <px-slider value="10" disabled="true" id="px_slider_disabled"></px-slider>
 <px-slider start-value="-30" end-value="20" min="-40" max="100" id="px_slider_range_neg"></px-slider>
+<px-slider value="10" min="1" max="100" scale="logarithmic" id="px_slider_logarithmic"></px-slider>
 </body>
 </html>
