--- a/demo.html
+++ b/demo.html
@@ -10,9 +10,7 @@
     <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
 
     <!-- Import custom element. Note: see comment about relative paths to dependencies in the *.html file referenced below -->
-    <link rel="import" href="../px-theme/px-theme.html" />
     <link rel="import" href="px-slider.html" />
-    <link rel="import" href="demo-nested.html" />
     <style>
       html {
         font-size: .9375rem;
@@ -25,12 +23,12 @@
     <br />
     <h4>Single Value</h4>
 
-    <div id="mainDiv" style="width: 600px;">
-      <px-slider id="slider" min="0" max="100">
+    <div id="mainDiv" style="width: 100%;">
+      <px-slider id="slider" value="50" min="0" max="100" step="5">
       </px-slider>
 
-      <px-slider id="sliderMulti" start-value="20" end-value="80" min="-20" max="100">
-      </px-slider>
+      <!-- <px-slider id="sliderMulti" start-value="20" end-value="80" min="-20" max="100">
+      </px-slider> -->
       <!-- <h4>Single Value, Greater Precision.  (Step set to 0.001)</h4>
      <px-slider value="5.556" min="0" max="100" step="0.001">
      </px-slider>
