--- a/px-slider.html
+++ b/px-slider.html
@@ -49,7 +49,7 @@ Custom property | Description | Default
     <template is="dom-if" if="[[_showStartInput]]">
       <input id="inputStart"
         type="text"
-        class="text-input input--tiny flex__item--no-grow"
+        class="text-input flex__item--no-grow"
         value="[[formattedStartValue]]"
         on-change="_inputChangedStart"
         tabindex="0"
@@ -599,8 +599,9 @@ Custom property | Description | Default
 
     _valueChanged: function(v) {
       var handle = (this._isRange) ? this._startHandle : this._singleHandle;
-
-      handle.attr("transform", "translate(" + this._scale(v) + ",0)")
+      if(handle) {
+        handle.attr("transform", "translate(" + this._scale(v) + ",0)")
+      }
     },
 
     _endValueChanged: function() {
