--- a/demo.html
+++ b/demo.html
@@ -27,23 +27,9 @@
       <px-slider id="slider" value="50" min="1" max="98" step="0.05">
       </px-slider>
 
-      <!-- <px-slider id="sliderMulti" start-value="20" end-value="80" min="-20" max="100">
-      </px-slider> -->
-      <!-- <h4>Single Value, Greater Precision.  (Step set to 0.001)</h4>
-     <px-slider value="5.556" min="0" max="100" step="0.001">
-     </px-slider>
-       <h4>Single Value, Greater Precision and Custom Step (Step set to 0.04)</h4>
-      <px-slider value="5.44" min="0" max="20" step="0.04">
+      <px-slider id="sliderMulti" start-value="20" end-value="80" min="-20" max="100">
       </px-slider>
-      <h4>Range</h4>
-      <div style="width: 600px;">
-        <px-slider start-value="20" end-value="40" min="0" max="60">
-        </px-slider>
-      </div>
-      <h4>Step = 50</h4>
-      <div style="width: 600px;">
-        <px-slider value="150" min="0" max="500" step="50"></px-slider>
-      </div> -->
+      
     </div>
   </body>
 
