--- a/px-slider.html
+++ b/px-slider.html
@@ -78,32 +78,25 @@ Custom property | Description | Default
         </g>
         <g id="zoneBars"></g>
         <g id="progressBar">
-          <rect class="progressBar sliderTrack" x="[[_calcProgressStart(value, endValue, _scaleChanged)]]" y="0" rx="2" ry="2" width$="[[_calcProgressEnd(value, endValue, _scaleChanged)]]" height="10"/>
+          <rect class="progressBar sliderTrack" x$="[[_calcProgressStart(value, _scaleChanged, _isRange)]]" y="0" rx="2" ry="2" width$="[[_calcProgressEnd(value, endValue, _scaleChanged, _isRange)]]" height="10"/>
         </g>
 
-        <g id="multiHandles">
-          <g id="handleTargetStart" on-down="handleDown" on-up="handleUp" on-track="handleTrack" tabindex="-1">
-            <!-- <path id="handleDropShadow" d="M0.76,12.26V4.67a3,3,0,0,1,3-3h15a3,3,0,0,1,3,3v7.59l-10,8.41h-1Z"/>
-            <path id="handleBody" d="M0.76,11.26V3.67a3,3,0,0,1,3-3h15a3,3,0,0,1,3,3v7.59l-10,8.41h-1Z"/>
-            <line class="handleLines" x1="14.09" y1="11" x2="14.09" y2="4"/>
-            <line class="handleLines" x1="8.09" y1="11" x2="8.09" y2="4"/>
-            <line class="handleLines" x1="11.09" y1="11" x2="11.09" y2="4"/> -->
-          </g>
-          <g id="handleTargetEnd" on-down="handleDown" on-up="handleUp" on-track="handleTrack" tabindex="-1">
-            <!-- <path id="handleDropShadow" d="M0.76,12.26V4.67a3,3,0,0,1,3-3h15a3,3,0,0,1,3,3v7.59l-10,8.41h-1Z"/>
-            <path id="handleBody" d="M0.76,11.26V3.67a3,3,0,0,1,3-3h15a3,3,0,0,1,3,3v7.59l-10,8.41h-1Z"/>
-            <line class="handleLines" x1="14.09" y1="11" x2="14.09" y2="4"/>
-            <line class="handleLines" x1="8.09" y1="11" x2="8.09" y2="4"/>
-            <line class="handleLines" x1="11.09" y1="11" x2="11.09" y2="4"/> -->
-          </g>
-        </g>
+        <g id="handleStart" class="handleGroup">
+          <!-- <rect class="handleDropShadow" width="21" height="21" x="-10.5" y="-4" rx="3" ry="3"/> -->
+          <!-- <rect class="handleBody" width="21" height="21" x="-10.5" y="-5" rx="3" ry="3"/> -->
 
-        <g id="singleHandle" class="handleGroup">
-          <rect class="handleDropShadow" width="21" height="21" x="-10.5" y="-4" rx="3" ry="3"/>
-          <rect class="handleBody" width="21" height="21" x="-10.5" y="-5" rx="3" ry="3"/>
-          <line class="handleLines" x1="-3.5" x2="-3.5" y1="2" y2="9"/>
-          <line class="handleLines" x1="0" x2="0" y1="2" y2="9"/>
-          <line class="handleLines" x1="3.5" x2="3.5" y1="2" y2="9"/>
+          <path class="handleDropShadow"/>
+          <path class="handleBody"/>
+          <line class="handleLines" x1="-3.5" x2="-3.5"/>
+          <line class="handleLines" x1="0" x2="0"/>
+          <line class="handleLines" x1="3.5" x2="3.5"/>
+        </g>
+        <g id="handleEnd" class="handleGroup">
+          <path class="handleDropShadow"/>
+          <path class="handleBody"/>
+          <line class="handleLines" x1="-3.5" x2="-3.5"/>
+          <line class="handleLines" x1="0" x2="0"/>
+          <line class="handleLines" x1="3.5" x2="3.5"/>
         </g>
       </g>
     </svg>
@@ -150,8 +143,8 @@ Custom property | Description | Default
         notify: true,
         value: function() {
           return {
-            left: 11,
-            right: 11,
+            left: 13,
+            right: 13,
             top: 21,
             bottom: 21
           };
@@ -168,21 +161,12 @@ Custom property | Description | Default
       },
 
       /**
-       * For multi-handled/ranged sliders, the value of the left handle or start of the selected range.
-       */
-      startValue: {
-        type: Number,
-        notify: true
-      },
-
-      /**
        * For multi-handled/ranged sliders, the value of the right handle or end of the selected range.
        */
       endValue: {
         type: Number,
         notify: true,
-        value: null,
-        observer: '_endValueChanged'
+        value: null
       },
 
       /**
@@ -314,12 +298,6 @@ Custom property | Description | Default
       /**
        * A holder for the handle d3 selected elem
        */
-      _singleHandle: {
-        type: Object
-      },
-      /**
-       * A holder for the handle d3 selected elem
-       */
       _startHandle: {
         type: Object
       },
@@ -336,6 +314,32 @@ Custom property | Description | Default
       _format: {
         type: String,
         value: "0"
+      },
+
+      _handleDefinitions: {
+        type: Object,
+        value: function() {
+          return {
+            "square": {
+              "shadowD": "M-11,-1a3,3,0,0,1,3-3h16a3,3,0,0,1,3,3v15a3,3,0,0,1,-3,3h-16a3,3,0,0,1,-3-3Z",
+              "bodyD": "M-11,-2a3,3,0,0,1,3-3h16a3,3,0,0,1,3,3v15a3,3,0,0,1,-3,3h-16a3,3,0,0,1,-3-3Z",
+              "linesY1": "2",
+              "linesY2": "9"
+            },
+            "down": {
+              "shadowD": "M-11,-16a3,3,0,0,1,3-3h16a3,3,0,0,1,3,3v9l-10.5,8h-1l-10.5,-8Z",
+              "bodyD": "M-11,-17a3,3,0,0,1,3-3h16a3,3,0,0,1,3,3v9l-10.5,8h-1l-10.5,-8Z",
+              "linesY1": "-15",
+              "linesY2": "-8"
+            },
+            "up": {
+              "shadowD": "M11,18.5v9c0,1.7-1.3,3-3,3h-16c-1.7,0-3-1.3-3-3v-9l10.5,-8h1l10.5,8Z",
+              "bodyD": "M11,17.5v9c0,1.7-1.3,3-3,3h-16c-1.7,0-3-1.3-3-3v-9l10.5,-8h1l10.5,8Z",
+              "linesY1": "18",
+              "linesY2": "25"
+            }
+          }
+        }
       }
 
     },
@@ -344,8 +348,11 @@ Custom property | Description | Default
       '_setRange(_scale, _width, _height)',
       '_setDomain(_scale, _minMaxValid)',
       '_valueChanged(value, _scale, _scaleChanged)',
+      '_endValueChanged(endValue, _scale, _scaleChanged)',
       '_updateFormat(step)',
-      '_updateFormat(format)'
+      '_updateFormat(format)',
+      '_buildHandles(_isRange)',
+      '_checkRange(endValue)'
     ],
 
     listeners: {
@@ -358,18 +365,16 @@ Custom property | Description | Default
     },
 
     _animationFrame: function() {
+      var startHandle = Px.d3.select(this.$$('#handleStart'));
+      var endHandle = Px.d3.select(this.$$('#handleEnd'));
 
-      var singleHandle = Px.d3.select(this.$$('#singleHandle'));
-      this._setupHandle(singleHandle, 'value');
-      this.set('_singleHandle', singleHandle);
-
-      var startHandle = Px.d3.select(this.$$('#multiHandleStart'));
       this._setupHandle(startHandle, 'value');
-      this.set('_startHandle', startHandle);
-
-      var endHandle = Px.d3.select(this.$$('#multiHandleEnd'));
       this._setupHandle(endHandle, 'endValue');
+
+      this.set('_startHandle', startHandle);
       this.set('_endHandle', endHandle);
+
+      this._buildHandles();
 
       var self = this;
       var interactionRects = Px.d3.selectAll(Polymer.dom(this.$$('#sliderSVG')).querySelectorAll('.sliderTrack'));
@@ -383,6 +388,47 @@ Custom property | Description | Default
           self._calcSliderValue(val, 'value');
         }
       });
+    },
+
+    _buildHandles: function() {
+      if(this._handleDefinitions) {
+        if(this._isRange) {
+
+          this._startHandle.select('.handleDropShadow')
+            .attr("d", this._handleDefinitions.up.shadowD);
+          this._startHandle.select('.handleBody')
+            .attr("d", this._handleDefinitions.up.bodyD);
+          this._startHandle.selectAll('.handleLines')
+            .attr("y1", this._handleDefinitions.up.linesY1)
+            .attr("y2", this._handleDefinitions.up.linesY2);
+
+          this._endHandle.select('.handleDropShadow')
+            .attr("d", this._handleDefinitions.down.shadowD);
+          this._endHandle.select('.handleBody')
+            .attr("d", this._handleDefinitions.down.bodyD);
+          this._endHandle.selectAll('.handleLines')
+            .attr("y1", this._handleDefinitions.down.linesY1)
+            .attr("y2", this._handleDefinitions.down.linesY2);
+
+        } else {
+          this._startHandle.select('.handleDropShadow')
+            .attr("d", this._handleDefinitions.square.shadowD);
+          this._startHandle.select('.handleBody')
+            .attr("d", this._handleDefinitions.square.bodyD);
+          this._startHandle.selectAll('.handleLines')
+            .attr("y1", this._handleDefinitions.square.linesY1)
+            .attr("y2", this._handleDefinitions.square.linesY2);
+
+          // remove end handle:
+          // this._endHandle.select('.handleDropShadow')
+          //   .attr("d", this._handleDefinitions.up.shadowD);
+          // this._endHandle.select('.handleBody')
+          //   .attr("d", this._handleDefinitions.up.bodyD);
+          // this._endHandle.selectAll('.handleLines')
+          //   .attr("y1", this._handleDefinitions.up.linesY1)
+          //   .attr("y2", this._handleDefinitions.up.linesY2);
+        }
+      }
     },
 
     _setupHandle: function(handle, valueVar) {
@@ -563,6 +609,7 @@ Custom property | Description | Default
       if(this._isRange) {
         // two scales
         // one for start one for end
+        this._scale.domain([this.min, this.max]);
       } else {
         this._scale.domain([this.min, this.max]);
       }
@@ -598,14 +645,19 @@ Custom property | Description | Default
     },
 
     _valueChanged: function(v) {
-      var handle = (this._isRange) ? this._startHandle : this._singleHandle;
-      if(handle) {
-        handle.attr("transform", "translate(" + this._scale(v) + ",0)")
+      if(this._startHandle) {
+        this._moveHandle(this._startHandle, v);
       }
     },
 
-    _endValueChanged: function() {
+    _endValueChanged: function(v) {
+      if(v && this._endHandle) {
+        this._moveHandle(this._endHandle, v);
+      }
+    },
 
+    _moveHandle: function(handle, v) {
+      handle.attr("transform", "translate(" + this._scale(v) + ",0)")
     },
 
     _calcTransform: function() {
@@ -613,16 +665,15 @@ Custom property | Description | Default
     },
 
     _calcProgressStart: function() {
-      if(this.endValue || this.endValue === 0) {
+      if(this._isRange) {
         return this._scale(this.value);
       }
-
       return 0;
     },
 
     _calcProgressEnd: function() {
-      if(this.endValue || this.endValue === 0) {
-        return this._scale(this.endValue);
+      if(this._isRange) {
+        return Math.max(this._scale(this.endValue) - this._scale(this.value), 1);
       }
 
       return this._scale(this.value);
