--- a/px-slider.html
+++ b/px-slider.html
@@ -327,8 +327,8 @@ Custom property | Description | Default
               "linesY2": "9"
             },
             "down": {
-              "shadowD": "M-11,-16a3,3,0,0,1,3-3h16a3,3,0,0,1,3,3v9l-10.5,8h-1l-10.5,-8Z",
-              "bodyD": "M-11,-17a3,3,0,0,1,3-3h16a3,3,0,0,1,3,3v9l-10.5,8h-1l-10.5,-8Z",
+              "shadowD": "M-10.5,-16a3,3,0,0,1,3-3h16a3,3,0,0,1,3,3v9l-10.5,8h-1l-10.5,-8Z",
+              "bodyD": "M-10.5,-17a3,3,0,0,1,3-3h16a3,3,0,0,1,3,3v9l-10.5,8h-1l-10.5,-8Z",
               "linesY1": "-15",
               "linesY2": "-8"
             },
@@ -364,18 +364,28 @@ Custom property | Description | Default
       this._checkRange();
     },
 
+    /**
+     * Do general setup on our svg once we have an animation frame and know stuff exists
+     * - create listeners
+     * - draw our handles
+     */
     _animationFrame: function() {
+      // get the d3 selected handles
       var startHandle = Px.d3.select(this.$$('#handleStart'));
       var endHandle = Px.d3.select(this.$$('#handleEnd'));
 
-      this._setupHandle(startHandle, 'value');
-      this._setupHandle(endHandle, 'endValue');
+      // create our drag and hover,etc  states
+      this._createHandleListeners(startHandle, 'value');
+      this._createHandleListeners(endHandle, 'endValue');
 
+      // save the d3 selected handles
       this.set('_startHandle', startHandle);
       this.set('_endHandle', endHandle);
 
+      // configure our handle paths
       this._buildHandles();
 
+      // setup listeners on the bars to enable click to jump value
       var self = this;
       var interactionRects = Px.d3.selectAll(Polymer.dom(this.$$('#sliderSVG')).querySelectorAll('.sliderTrack'));
       interactionRects.on('click', function() {
@@ -390,6 +400,47 @@ Custom property | Description | Default
       });
     },
 
+    /**
+     * Creates the drag behavior and hover, pressed states for the handles.
+     */
+    _createHandleListeners: function(handle, valueVar) {
+      var handleBody = handle.select('.handleBody'),
+          handleLines = handle.selectAll('.handleLines'),
+          handleShadow = handle.select('.handleDropShadow');
+
+      handle.call(d3.drag()
+        .on("start.interrupt", function() { handle.interrupt(); })
+        .on("start drag", function() {
+          // apply styling
+          handleBody.classed("handleBodyPressed", true);
+          handleLines.classed("handleLinesPressed", true);
+          handleShadow.classed("handleDropShadowPressed", true);
+// TODO for vertical: check state, d3.event.y
+          this._calcSliderValue(d3.event.x, valueVar);
+
+        }.bind(this))
+       .on("end", function() {
+          handleBody.classed("handleBodyPressed", false);
+          handleLines.classed("handleLinesPressed", false);
+          handleShadow.classed("handleDropShadowPressed", false);
+        })
+      )
+      .on("mouseenter", function() {
+        handleBody.classed("handleBodyHover", true);
+        handleLines.classed("handleBodyHover", true);
+      })
+      .on("mouseleave", function() {
+        handleBody.classed("handleBodyHover", false);
+        handleLines.classed("handleBodyHover", false);
+      });
+    },
+
+    /**
+     * For flexibility and efficiency, the basic paths and lines are already loaded into the dom.
+     * We just need to actually add paths, etc so they are not invisible, which is what this function does.
+     * This way, we dont have to do special setup in range vs single mode, just dont draw the other handle
+     * when in single mode and just morph the drawing of the single handle when in range mode.
+     */
     _buildHandles: function() {
       if(this._handleDefinitions) {
         if(this._isRange) {
@@ -431,38 +482,9 @@ Custom property | Description | Default
       }
     },
 
-    _setupHandle: function(handle, valueVar) {
-      var handleBody = handle.select('.handleBody'),
-          handleLines = handle.selectAll('.handleLines'),
-          handleShadow = handle.select('.handleDropShadow');
-
-      handle.call(d3.drag()
-        .on("start.interrupt", function() { handle.interrupt(); })
-        .on("start drag", function() {
-          // apply styling
-          handleBody.classed("handleBodyPressed", true);
-          handleLines.classed("handleLinesPressed", true);
-          handleShadow.classed("handleDropShadowPressed", true);
-// TODO for vertical: check state, d3.event.y
-          this._calcSliderValue(d3.event.x, valueVar);
-
-        }.bind(this))
-       .on("end", function() {
-          handleBody.classed("handleBodyPressed", false);
-          handleLines.classed("handleLinesPressed", false);
-          handleShadow.classed("handleDropShadowPressed", false);
-        })
-      )
-      .on("mouseenter", function() {
-        handleBody.classed("handleBodyHover", true);
-        handleLines.classed("handleBodyHover", true);
-      })
-      .on("mouseleave", function() {
-        handleBody.classed("handleBodyHover", false);
-        handleLines.classed("handleBodyHover", false);
-      });
-    },
-
+    /**
+     * Resizes the slider
+     */
     _onIronResize: function() {
       if(this.preventResize) {
         return;
@@ -484,6 +506,9 @@ Custom property | Description | Default
       }, 10);
     },
 
+    /**
+     * Shows or hides the input boxes based on settings. Triggers the dom-ifs in the Template
+     */
     _hideInputsChanged: function() {
       if(this.hideInputs) {
         this.set('_showStartInput', false);
@@ -496,13 +521,19 @@ Custom property | Description | Default
       this.notifyResize();
     },
 
+    /**
+     * Returns the width to be used for the svg
+     */
     _getSvgWith: function() {
       return this._width + this._margin.left + this._margin.right
     },
-
+    /**
+     * Returns the height to be used for the svg
+     */
     _getSvgHeight: function() {
       return this._height + this._margin.top + this._margin.bottom
     },
+
 
     _checkRange: function() {
       if(this.endValue || this.endValue === 0) {
@@ -512,6 +543,9 @@ Custom property | Description | Default
       }
     },
 
+    /**
+     * Validates that the step property is valid value
+     */
     _stepChanged: function() {
       // validate step
       if(this.step < 0) {
@@ -527,6 +561,9 @@ Custom property | Description | Default
       }
     },
 
+    /**
+     * Validates the the min and max values are valid values
+     */
     _minOrMaxChanged: function() {
       this.debounce('_minOrMaxChanged', function() {
         var min, max;
