removed extraneous behavior

--- a/px-slider.html
+++ b/px-slider.html
@@ -137,8 +137,7 @@ Custom property | Description | Default
 
     behaviors: [
       Polymer.IronResizableBehavior,
-      PxNumberFormatter.commonProperties,
-      Polymer.IronA11yKeysBehavior
+      PxNumberFormatter.commonProperties
     ],
 
     /**
