--- a/dev.html
+++ b/dev.html
@@ -24,11 +24,9 @@
     <h4>Single Value</h4>
 
     <div id="mainDiv" style="width: 100%;">
-      <px-slider id="slider" value="50" min="1" max="98" step="0.05">
-      </px-slider>
+      <px-slider id="slider" value="50" min="1" max="98" step="0.05"></px-slider>
 
-      <px-slider id="sliderMulti" start-value="20" end-value="80" min="-20" max="100" is-range>
-      </px-slider>
+      <px-slider id="sliderMulti" start-value="20" end-value="80" min="-20" max="100" is-range></px-slider>
 
     </div>
   </body>
